Updated  index.html

--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 
         // Improved Roblox Redirect
         function redirectToRoblox(gameId) {
-            const url = `https://www.roblox.com/games/${17358134145}`;
+            const url = `https://www.roblox.com/games/17358134145/BlazeFX-Wouts-Pyrotechnics`;
             window.open(url, '_blank');
         }
 
